Ingresses/ip-webapp-nodeip.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "ip-webapp-nodeport"
spec:
  type: "NodePort"
  selector:
    app: "ip-webapp"	# select pods with label app=ip-webapp
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
