Ingresses/ip-webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ip-webapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: ip-webapp-nodeport
          servicePort: 8080
